# hybrid-racing-simulator

./: Cargo.toml  GEMINI.md  PLAN.md  index.html
assets/: main.css
src/: athlete.rs  athlete_draft.rs  main.rs  race.rs
